fix align pictues vertically

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -10,7 +10,7 @@
   grid-column: 1;
   text-align: center;
   vertical-align: middle;
-
+  margin: auto;
   /* background-color: rgb(0, 0, 0); */
 }
 
